main/kubernetes-scheduler-networkpolicy/network-policy/go-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: goproject
spec:
  selector:
    app: goproject
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: http-8081
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goproject-deployment
  labels:
    app: goproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goproject
  template:
    metadata:
      labels:
        app: goproject
    spec:
      containers:
        - name: goproject
          image: venture007-docker.pkg.coding.net/gupao-cloud-native-base/cloud-native/goproject:1.0.0
          ports:
            - containerPort: 8081
