main/kubernetes-scheduler-networkpolicy/network-policy/java2-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: javaproject2
spec:
  selector:
    app: javaproject2
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      name: http-8082
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javaproject2-deployment
  labels:
    app: javaproject2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: javaproject2
  template:
    metadata:
      labels:
        app: javaproject2
    spec:
      containers:
        - name: javaproject2
          image: venture007-docker.pkg.coding.net/gupao-cloud-native-base/cloud-native/javaproject2:1.0.0
          ports:
            - containerPort: 8082
