main/kubernetes-scheduler-networkpolicy/network-policy/network-policy-pod-selector-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: goproject
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pythonproject
      ports:
        - protocol: TCP
          port: 8081
