main/kubernetes-scheduler-networkpolicy/network-policy/network-policy-practice-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy-2
  namespace: cka-training
spec:
  podSelector:
    matchLabels:
      env: test
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              env: dev
      ports:
        - protocol: TCP
          port: 5432
